# usrs

./: .gitignore  Cargo.toml  README.md  flake.nix
examples/: descriptor.rs  lsusrs.rs
src/: backend.rs  convenience.rs  device.rs  error.rs  futures.rs  host.rs  lib.rs  request.rs
src/backend/: macos.rs
src/backend/macos/: callback.rs  device.rs  endpoint.rs  enumeration.rs  interface.rs  iokit.rs  iokit_c.rs
