[package]
name = "usrs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "usrs"

[[example]]
name = "lsusrs"

[[example]]
name = "descriptor"

[dependencies]
log = "0.4.17"

[target.'cfg(target_os="macos")'.dependencies]
core-foundation-sys = "0.8.3"
io-kit-sys = "0.2.0"

[dev-dependencies]
env_logger = "0.10.0"
